@@ -178,6 +178,7 @@ struct pam_handle {
     int audit_state;             /* keep track of reported audit messages */
 #endif
     int authtok_verified;
+    char *confdir;
 };
 
 /* Values for select arg to _pam_dispatch() */
