@@ -1,0 +1,1 @@
+# This is an empty pam service file for tst-pam_start_confdir
