@@ -29,7 +29,9 @@ Release 1.4.0
 * pam_unix: Support for (gost-)yescrypt hashing methods
 * pam_unix: Use bcrypt b-variant when it bcrypt is chosen
 * pam_usertype: New module to tell if uid is in login.defs ranges
-
+* Added new API call pam_start_confdir() for special applications that
+  cannot use the system-default PAM configuration paths and need to
+  explicitly specify another path
 
 Release 1.3.1
 * pam_motd: add support for a motd.d directory
